second iteration: refacotring